--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
     "repository": "https://github.com/yoratoni/Mdisk",
     "private": true,
     "scripts": {
-        "start": "ts-node src/mdisk.ts"
+        "start": "ts-node src/mdisk.ts",
+        "test": "mocha -r ts-node/register src/tests/**.ts"
     },
     "dependencies": {
+        "chai": "^4.3.7",
         "dotenv": "^16.0.3",
+        "mocha": "^10.1.0",
         "ts-node": "^10.9.1"
     },
     "devDependencies": {
+        "@types/chai": "^4.3.4",
+        "@types/mocha": "^10.0.1",
         "@types/node": "^18.11.10",
         "@typescript-eslint/eslint-plugin": "^5.45.0",
         "@typescript-eslint/parser": "^5.45.0",
