--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "chai": "^4.3.7",
+        "colors": "^1.4.0",
         "dotenv": "^16.0.3",
         "mocha": "^10.1.0",
         "ts-node": "^10.9.1"
