--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "colors": "^1.4.0",
         "dotenv": "^16.0.3",
         "mocha": "^10.1.0",
+        "speaker": "^0.5.4",
         "ts-node": "^10.9.1"
     },
     "devDependencies": {
