--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "chai": "^4.3.7",
         "colors": "^1.4.0",
         "dotenv": "^16.0.3",
+        "lzo": "^0.4.11",
         "mocha": "^10.1.0",
         "speaker": "^0.5.4",
         "ts-node": "^10.9.1"
