--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "repository": "https://github.com/yoratoni/Mdisk",
     "private": true,
     "scripts": {
-        "start": "ts-node src/mdisk.ts",
-        "test": "mocha -r ts-node/register src/tests/**.ts"
+        "start": "ts-node src/mdisk.ts"
     },
     "dependencies": {
         "chai": "^4.3.7",
