Solved an encoding issue on String <=> Uint8Array conversions

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "chai": "^4.3.7",
         "colors": "^1.4.0",
         "dotenv": "^16.0.3",
+        "iconv-lite": "^0.6.3",
         "lzo": "^0.4.11",
         "mocha": "^10.1.0",
         "speaker": "^0.5.4",
